coverage(feature/tech_debt_Increase_code_coverage_Part_3): Added test coverage to ChildrenAndOtherPeopleInThisApplicationChecker